# lectures

./: Dockerfile  LICENSE  README.md  _config.yml
.well-known/: microsoft-identity-association.json
01_uvod_do_programovaciho_jazyka_c/: readme.md
02_reprezentace_cisel_v_pocitaci/: readme.md
03_pole_a_pamet/: readme.md
04_slozitost_a_tridici_algoritmy/: readme.md
05_spojovy_seznam/: readme.md
06_rekurze/: readme.md
08_binarni_vyhledavaci_strom/: readme.md
09_vyvazene_stromy/: readme.md
12_binarni_halda/: readme.md
14_slozite_ulohy/: readme.md
15_dynamicke_programovani/: readme.md
15_dynamicke_programovani/code/: CMakeLists.txt
16_uvod_do_oop/: readme.md
17_paralelni/code/: deadlock.c  fact.c
20_automaty/: readme.md
21_regularni_vyrazy/: readme.md
22_prace_s_daty/: readme.md
_includes/: head-custom.html
apps/hash/: index.html
apps/labyrinth/: index.html
assets/css/: dark-mode.css
assets/js/: dark-mode.js
misc/: Dockerfile
registrace/: readme.md
teoreticka/07_stromove_struktury/: readme.md
teoreticka/11_pruchody_grafem/: readme.md
teoreticka/18_paralelni_2/code/: CMakeLists.txt  cond_var.c  openmp.c
teoreticka/pre_2025/: readme.md
teoreticka/pre_2025/15_dynamicke_programovani/code/: CMakeLists.txt
teoreticka/pre_2025/15_dynamicke_programovani/code/fibonacci/: fib_bottom_up.c
teoreticka/pre_2025/15_dynamicke_programovani/code/knapsack/: 1000.txt  knapsack_recursive.c
teoreticka/pre_2025/17_paralelni/code/: CMakeLists.txt
teoreticka/pre_2025/17_paralelni/code/input/: 100_10000.txt
workshopy/ansible/: readme.md
workshopy/data-science/: readme.md
workshopy/docker/: readme.md
workshopy/linux/: readme.md
workshopy/parallel/: readme.md
workshopy/prace-s-daty/: readme.md
workshopy/server/: readme.md
workshopy/sql/: readme.md
(+43 files in other folders)
